squashing mobile bugs

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -8,7 +8,7 @@
   position: relative;
   padding-top: 200px;
   @include mobile {
-    padding-top: 40px;
+    padding-top: 140px;
   }
 
   &__animation {
