--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -10,7 +10,7 @@
   position: relative;
   padding-top: 200px;
   @include mobile {
-    padding-top: 40px;
+    padding-top: 140px;
   }
 
   &__animation {
