--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   flex: 1 30vw;
   position: relative;
+  top: 100px;
 
   &__animation {
     width: 100%;
